Refactor ServiceTemplateService to return a list of service template summaries as maps instead of DataStore objects
