# apps/wanaku-router-backend/src/main/webui/openapi.yaml
@@ -394,6 +394,23 @@ components:
           type: string
         languageSubType:
           type: string
+    ServiceTemplateSummary:
+      type: object
+      properties:
+        id:
+          type: string
+        name:
+          type: string
+        icon:
+          type: string
+        description:
+          type: string
+        services:
+          type: array
+          items:
+            type: string
+        hasProperties:
+          type: boolean
     StaleCapabilityInfo:
       type: object
       properties:
@@ -614,6 +631,15 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/ServiceTarget"
+    WanakuResponseListServiceTemplateSummary:
+      type: object
+      properties:
+        error:
+          $ref: "#/components/schemas/WanakuError"
+        data:
+          type: array
+          items:
+            $ref: "#/components/schemas/ServiceTemplateSummary"
     WanakuResponseListStaleCapabilityInfo:
       type: object
       properties:
@@ -1749,7 +1775,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/WanakuResponseListMapStringObject"
+                $ref: "#/components/schemas/WanakuResponseListServiceTemplateSummary"
       summary: List
       tags:
       - Service Template Resource
